--- a/changecalculator.html
+++ b/changecalculator.html
@@ -9,10 +9,9 @@
 	<script type="text/javascript" src='jq.js'></script>
 	<form action="#" id="calculator">
 		<h2>USD Change Calculator</h2>
-		<input type="number" name="num" id="num" placeholder="num" />
+		<input type="number" step=0.01 name="num" id="num" placeholder="num" />
 		<input type="submit" value="Calculate" id="submit" /> 
 	</form>
-
 	<!--<fieldset>
 		<legend>Input a number</legend>
 		<input type="text" id="inputNum"size="25"/>
