--- a/changecalculator.html
+++ b/changecalculator.html
@@ -9,8 +9,9 @@
 	<script type="text/javascript" src='jq.js'></script>
 	<form action="#" id="calculator">
 		<h2>USD Change Calculator</h2>
-		<input type="number" step=0.01 name="num" id="num" placeholder="num" />
+		<input type="number" step=0.01 name="num" id="num" placeholder="0.00" />
 		<input type="submit" value="Calculate" id="submit" /> 
+		<div id="div"></div>
 	</form>
 	<!--<fieldset>
 		<legend>Input a number</legend>
